examples/misc/error/compilation/eval_wdt_bool.bfml
let main = [
  *(if 123 then [] else [])
]